--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       tag will appear on the page, just like this <strong>p</strong>
       tag and its contents.
       </p>
+      <div id="viz">
+      </div>
   </body>
 </html> 
 
