--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
       </p>
       <div id="viz">
       </div>
+      <script>
+      var vlSpec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
+    "data": {
+        "values": [
+            {"A": 10, "B": 21, "C": 2},
+            {"A": 30, "B": 20, "C": 4},
+            {"A": 25, "B": 15, "C": 6},
+            {"A": 5, "B": 30, "C": 8}
+        ]
+    },
+    "mark": "circle",
+    "encoding": {
+        "x": { "field": "A", "type": "quantitative"},
+        "y": { "field": "B", "type": "quantitative"},
+        "size": { "field": "C", "type": "quantitative"}
+    }
+};
+       vegaEmbed('#viz', vlSpec);
+      </script>
   </body>
 </html> 
 
