add building data

--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
       var vlSpec = {
     "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
-        "values": [
-            {"A": 10, "B": 21, "C": 2},
-            {"A": 30, "B": 20, "C": 4},
-            {"A": 25, "B": 15, "C": 6},
-            {"A": 5, "B": 30, "C": 8}
-        ]
-    },
+        "url": "https://uiuc-ischool-dataviz.github.io/spring2019online/week02/building_inventory.csv"},
     "mark": "circle",
     "encoding": {
         "x": { "field": "A", "type": "quantitative"},
