--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         "url": "https://uiuc-ischool-dataviz.github.io/spring2019online/week02/building_inventory.csv"},
     "mark": "circle",
     "encoding": {
-        "x": { "field": "A", "type": "quantitative"},
-        "y": { "field": "B", "type": "quantitative"},
-        "size": { "field": "C", "type": "quantitative"}
+        "x": { "field": "Year Constructed", "type": "quantitative"},
+        "y": { "field": "Square Footage", "type": "quantitative"},
+        "color": {"aggregate": "sum", "field": "Total Floors",
+            "scale": {"type": "log"}
     }
 };
        vegaEmbed('#viz', vlSpec);
