Adding build_grouped.json into index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       var vlSpec = {
         "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
     "data": {
-        "url": "build_grouped.csv"},
+        "url": "build_grouped.json"},
     "mark": "line",
     "encoding": {
         "x": { "field": "Year Acquired", "timeUnit": "year"},
