--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
       <p>
-      This is an example paragraph. Anything in the <strong>body</strong>
-      tag will appear on the page, just like this <strong>p</strong>
-      tag and its contents.
+      This webpage illustrates the <strong>buildings.csv</strong> dataset. The visualization represents 
+      the relationship between Acquired Year and the Sum of Square Footage as a line graph.
+        Yerassyl Koshan
       </p>
       <div id="viz">
       </div>
