--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         The bar chart represents the relationship between Congress Districts and Total Square Footage.
         The Agency Name and Square Footage of each building can be observed by pointing on the individual points,
         by using click and drag selection the Sum of selected buildings can be visualized in the secon plot. 
-        Yerassyl Koshan
+                                                                                             Yerassyl Koshan
       </p>
       <div id="viz">
       </div>
@@ -25,7 +25,7 @@
         "hconcat": [
         {
       "mark": {"type": "circle"},
-      "selection": {"clickanddrag": {"type": "interval", "encodings": ["y"]}},
+      "selection": {"clickanddrag": {"type": "interval"}},
       "encoding": {
         "x": {"field": "Year Acquired", "timeUnit": "year"},
         "y": {"field": "Year Constructed", "timeUnit": "year"},
