--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
       <p>
-      This webpage illustrates the <strong>buildings.csv</strong> dataset. The visualization represents 
+This webpage illustrates the <strong>buildings.csv</strong> dataset. The visualization represents 
       the relationship between Acquired Year and Construction Year as a scatter plot. 
         The bar chart represents the relationship between Congress Districts and Total Square Footage.
-        The Agency Name and Square Footage of each building can be observed by pointing on the individual points,
-        by using click and drag selection the Sum of selected buildings can be visualized in the secon plot. 
+        The Agency Name and Square Footage of each building can be observed by pointing at the individual points,
+        by using click and drag selection the Sum of selected buildings can be visualized in the second plot. 
                                                                                             
       </p>
       <div id="viz">
